--- a/conf/reports.config
+++ b/conf/reports.config
@@ -1,6 +1,6 @@
 /*
  * ---------------------------------------------------------
- *  Nextflow config file for FLORE workflow report
+ *  Nextflow config file for FAUNE workflow report
  * ---------------------------------------------------------
  */
 
